# specvsreality

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  repo.code-workspace  skills-lock.json
api/: .env.example  Dockerfile  pyproject.toml
api/src/specvsreality_api/: config.py  main.py
api/src/specvsreality_api/core/: spec_text_match.py
api/src/specvsreality_api/facades/: __init__.py  gantt_chart_facade.py  metrics_dashboard_facade.py  repo_dashboard_facade.py  repo_logs_facade.py  repo_sidebar_facade.py  spec_tree_facade.py  spec_view_facade.py
api/src/specvsreality_api/messaging/: __init__.py  publisher.py
api/src/specvsreality_api/routes/: gantt.py  health.py  hello_world.py  metrics_dashboard.py  repo_catalog.py  repo_dashboard.py  repo_logs.py  repos.py
api/src/specvsreality_api/schemas/: __init__.py  metrics_dashboard.py  repo_dashboard.py  repo_logs.py  repo_sidebar.py  requirement_latest_version.py  requirement_version_tree.py  spec_tree.py  spec_view.py
api/tests/: conftest.py  test_gantt_chart_facade.py  test_gantt_route.py  test_hello_world.py  test_metrics_dashboard.py  test_repo_catalog.py  test_repo_logs.py  test_repos.py  test_spec_text_match.py
messages/: pyproject.toml
messages/src/specvsreality_messages/: __init__.py  hello_world.py  init_repo.py  scan_repo.py  spec_scan.py  wind_to_head.py
messages/tests/: test_messages.py  test_scan_repo_message.py  test_worker_messages.py
repositories/: alembic.ini  pyproject.toml
repositories/alembic/: env.py
repositories/alembic/versions/: 0001_initial_temporal_schema.py  20250331_0001_initial_git_repo.py  20260512_0001_drop_artifact_filename.py  20260514_0001_spec_version_nullable_tasks_plan.py  20260521_0001_spec_version_commit_metadata.py  20260521_0002_rename_commit_id_to_commit_sha.py  20260522_0001_implementation_at_commit.py  20260608_0001_initial.py  20260608_0002_spec_item_highlight_spans.py  20260608_0003_spec_identity_constraints.py  20260608_0004_git_repo_clone_error.py  20260609_0005_commit_log.py
repositories/src/specvsreality_repositories/: __init__.py  text_match.py
repositories/src/specvsreality_repositories/models/: __init__.py  _types.py  agent_run_metric.py  artifact.py  artifact_candidate.py  artifact_version.py  base.py  blob.py  commit.py  commit_file.py  commit_log.py  commit_parent.py  enums.py  git_repo.py  implementation_at_commit.py  implementation_claim.py  implements.py  ref.py  repository.py  requirement.py  requirement_version.py  spec.py  spec_item.py  spec_version.py
repositories/src/specvsreality_repositories/repos/: __init__.py  agent_run_metric_repo.py  artifact_candidate_repo.py  artifact_repo.py  artifact_version_repo.py  blob_repo.py  commit_file_repo.py  commit_log_repo.py  commit_repo.py  enums.py  gantt_data_repo.py  git_repo_repo.py  implementation_at_commit_repo.py  implementation_claim_repo.py  implements_repo.py  repo_dashboard_repo.py  repository_repo.py  requirement_repo.py  requirement_version_repo.py  scan_selection_repo.py  spec_item_repo.py  spec_repo.py  spec_tree_repo.py  spec_version_repo.py
repositories/tests/: conftest.py  test_artifact_version_repo.py  test_git_repo_db.py  test_migrations.py  test_spec_graph_db.py  test_text_match.py
repositories/tests/fixtures/: __init__.py  graph.py
repositories/tests/repos/: __init__.py  test_agent_run_metric_repo.py  test_artifact_candidate_repo.py  test_artifact_repo.py  test_artifact_version_repo.py  test_blob_repo.py  test_catalog_repos.py  test_commit_file_repo.py  test_commit_log_repo.py  test_commit_repo.py  test_gantt_data_repo.py  test_git_repo_repo.py  test_implementation_at_commit_repo.py  test_implementation_claim_repo.py  test_implements_repo.py  test_repo_dashboard_repo.py  test_repository_repo.py  test_requirement_repo.py  test_requirement_version_repo.py  test_scan_selection_repo.py  test_spec_item_repo.py  test_spec_repo.py  test_spec_tree_repo.py  test_spec_version_repo.py
worker/: .env.example  Dockerfile  pyproject.toml
worker/src/specvsreality_worker/: __init__.py  __main__.py  bootstrap.py  git_adapter.py  git_clone.py  main.py  model_token_cost.py  observability.py  spec_analyser.py
worker/src/specvsreality_worker/agents/: __init__.py  pydantic_ai_verbose.py
worker/src/specvsreality_worker/config/: __init__.py  defaults.yaml
worker/src/specvsreality_worker/core/: __init__.py  agent_metrics.py  artifact_merge.py  candidate_discovery.py  commit_context.py  commit_decision_log.py  commit_sync.py  commit_walker.py  evaluation.py  implements_evaluation.py  requirement_merge.py  scan_selection.py  spec_detection.py  spec_merge.py  spec_scanner.py  tree_scan.py
worker/src/specvsreality_worker/domain/: __init__.py  commit_record.py  detected_spec.py  extracted_requirement.py  spec_file_triplet.py  tree_entry.py  (+1 more)
worker/tests/: conftest.py
worker/tests/fixtures/: __init__.py  git_repos.py
worker/tests/integration/: __init__.py  conftest.py  test_git_adapter.py  test_git_client.py  test_ingestion_service_e2e.py
worker/tests/unit/: test_agent_metrics.py  test_artifact_merge.py  test_blob_reader.py  test_bootstrap.py  test_claim_gate.py  test_commit_decision_log.py  test_commit_processor.py  test_commit_sync.py  test_commit_tools.py  test_commit_walker.py  test_config.py  test_consumer_delegation.py  test_evaluation.py  test_handler_registry.py  test_hello_world_handler.py  test_implements_agent_settings.py  test_implements_agent_timeout.py  test_implements_evaluation.py  test_ingestion_service.py  test_init_repo_handler.py  test_model_cost.py  test_observability.py  test_processor.py  test_pydantic_ai_verbose.py  test_requirement_merge.py  test_requirement_version_writer.py  test_scan_repo_handler.py  test_scan_selection.py  test_spec_analyser.py  test_spec_detection.py  test_spec_detector.py  test_spec_merge.py  test_spec_scan_handler.py  test_spec_scanner.py  test_spec_version_resolver.py  test_wind_to_head_handler.py
(+146 files in other folders)
