[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specvsreality-api"
version = "0.1.0"
description = "FastAPI service for spec-vs-reality"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.2",
    "pika>=1.3",
    "specvsreality-messages",
    "specvsreality-repositories",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "alembic>=1.13",
]

[tool.uv.sources]
specvsreality-messages = { workspace = true }
specvsreality-repositories = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/specvsreality_api"]

[tool.hatch.build.targets.sdist]
include = ["src/specvsreality_api", "tests", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
