[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specvsreality-messages"
version = "0.1.0"
description = "Shared queue message schemas (Pydantic) for spec-vs-reality"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/specvsreality_messages"]

[tool.hatch.build.targets.sdist]
include = ["src/specvsreality_messages", "tests", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
