[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specvsreality-repositories"
version = "0.1.0"
description = "SQLAlchemy models and Alembic migrations"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "rapidfuzz>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/specvsreality_repositories"]

[tool.hatch.build.targets.sdist]
include = ["src/specvsreality_repositories", "alembic", "alembic.ini", "tests", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
