[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specvsreality-worker"
version = "0.1.0"
description = "Background worker: RabbitMQ consumer for spec-vs-reality jobs"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SpecVsReality contributors" }]
dependencies = [
    "GitPython>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pika>=1.3",
    "PyYAML>=6.0",
    "specvsreality-messages",
]

[tool.uv.sources]
specvsreality-messages = { workspace = true }

[project.scripts]
specvsreality-worker = "specvsreality_worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specvsreality_worker"]

[tool.hatch.build.targets.sdist]
include = ["src/specvsreality_worker", "tests", "pyproject.toml"]

# Used when the IDE workspace folder is `worker/` (root pyproject paths do not apply).
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
